[tool.poetry]
name = "v8serialize"
version = "0.1.0"
description = "The V8 serialialization format."
authors = ["Hal Blackburn <hwtb2@cam.ac.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.108.8"
pytest = "^8.3.2"
black = "^24.8.0"
flake8 = "^7.1.0"
flake8-pyi = "^24.6.0"
Flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
mypy = "^1.11.1"
flake8-bugbear = "^24.4.26"
frozendict = "^2.4.4"
pytest-cov = "^5.0.0"
pytest-insta = "^0.3.0"
httpx = "^0.27.0"
flake8-future-annotations = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 80
extend-select = "B950"
extend-ignore = "E203,E501,E701"
per-file-ignores = [
  # Allow unused imports as re-export in __init__
  "src/v8serialize/jstypes/__init__.py:F401",
]
force-future-annotations = true

[tool.isort]
profile = "black"
extra_standard_library = ["typing_extensions"]

[tool.mypy]
strict = true

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]
