[tool.poetry]
name = "v8serialize"
version = "0.1.0"
description = "Read & write JavaScript values from Python with the V8 serialization format."
authors = ["Hal Blackburn <hwtb2@cam.ac.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
packaging = ">=14.5" # this version introduces the VERSION_PATTERN constant

[tool.poetry.group.dev.dependencies]
exceptiongroup = { version = "^1", python = "<3.11" }
hypothesis = "^6.108.8"
pytest = "^7"
mypy = "^1.11.1"
frozendict = "^2.4.4"
pytest-cov = "^5.0.0"
pytest-insta = "^0.2.0"
httpx = "^0.27.0"
typing-extensions = "^4.12.2"
pytest-xdist = "^3.6.1"
ruff = "^0.6.5"


[tool.poetry.group.docs.dependencies]
quartodoc = "^0.7.6"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
extra_standard_library = ["typing_extensions"]

[tool.mypy]
strict = true

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]

[tool.pytest.ini_options]
addopts = [
  "-n",
  "auto",
  "--strict-markers",
  "-m",
  "not integration",
  "--doctest-modules",
]
markers = ["integration: Integration tests"]

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "D",   # pydocstyle
  "E",
  "F",
  "FA",  # flake8-future-annotations
  "PYI", # flake8-pyi
]
ignore = [
  "PYI041", # prefer "float" over "int | float". They are not the same!
  "D100",   # "Missing docstring in public module" — not everything is documented yet
  "D101",   # "Missing docstring in public class" — not everything is documented yet
  "D102",   # "Missing docstring in public method" — not everything is documented yet
  "D103",   # "Missing docstring in public function" — not everything is documented yet
  "D104",   # "Missing docstring in public package" — not everything is documented yet
  "D105",   # "Missing docstring in magic method" — not everything is documented yet
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
